syntax = "proto3";

package urlservice;

option go_package = "github.com/gorgio/network/api/proto";

service URLService {
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse);
  rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse);
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
}

message CreateShortURLRequest {
  string original_url = 1;
  string user_id = 2;
  string custom_alias = 3; // optional
}

message CreateShortURLResponse {
  string short_code = 1;
  string short_url = 2;
  string original_url = 3;
  int64 created_at = 4;
}

message GetOriginalURLRequest {
  string short_code = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
  bool found = 2;
}

message GetUserURLsRequest {
  string user_id = 1;
}

message URLInfo {
  string short_code = 1;
  string short_url = 2;
  string original_url = 3;
  int64 created_at = 4;
  int64 clicks = 5;
}

message GetUserURLsResponse {
  repeated URLInfo urls = 1;
}
